# archmind

./: .gitignore  CONTRIBUTING.md  README.md  api.md  decisions.md  pyproject.toml  requirements.txt  roadmap.md
docs/: AGENTS.md  SPEC.md  WORKFLOW.md  agent_roles.md  architecture.md  data.md  eval.md  result.md  security.md
knowledge/: bad_interface_api_design.json  data_ownership_confusion.json  graph_catalog.json  index.json  lack_of_observability.json  low_cohesion.json  poor_separation_of_concerns.json  scalability_bottlenecks.json  security_not_built_in.json  tight_coupling.json  unclear_boundaries.json  weak_fault_isolation.json
result/: architecture_graph_metrics.json  dependency_graph_dsm.csv  dependency_graph_metrics.json  dsm.csv  findings.json  interface_graph_findings.json  issue_assessments.json  issue_summary.json  metrics.json  operational_risk_graph_metrics.json  result.md
result-mongo-java-driver/: data_flow_graph_metrics.json  function_graph_metrics.json  interface_graph_metrics.json  result.md
result-mongo-java-driver-fix/: architecture_graph_findings.json  architecture_graph_metrics.json  data_flow_graph_metrics.json  interface_graph_metrics.json  operational_risk_graph_metrics.json
sample_result/: dependency_graph_findings.json  issue_summary.json  result.md
src/archmind/: __main__.py  analysis.py  cli.py  evaluation.py  graphing.py  inspection.py  knowledge.py  llm.py  models.py  pipeline.py  reporting.py  repository.py  ui.py  utils.py  visualization.py
src/archmind.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_analysis.py  test_cli.py  test_graphing.py  test_llm.py  test_pipeline.py  test_reporting.py  test_visualization.py
workspaces-repro-fix/run-20260313-210721-4bafbd17/analysis/: dependency_graph_metrics.json  function_graph_findings.json  function_graph_metrics.json  interface_graph_findings.json  issue_assessments.json  operational_risk_graph_findings.json
workspaces-repro-fix/run-20260313-210721-4bafbd17/deliverables/: result.md
workspaces-repro-fix/run-20260313-210721-4bafbd17/eval/: metrics.json  notes.md
(+145 files in other folders)
